[S10P12A406-157] feat : 동물 업적관련 엔티티 생성

--- a/ranking/src/main/resources/application.properties
+++ b/ranking/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.output.ansi.enabled=always
 
 # redis
 spring.redis.host=localhost
-#spring.redis.host=redis
 spring.redis.port=6379
 
 # mysql
@@ -14,7 +13,7 @@ spring.datasource.password=ssafy
 # JPA 설정
 spring.jpa.open-in-view=true
 spring.jpa.hibernate.ddl-auto=create
-#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 # Hibernate 5.0 부터 GenerationType.AUTO는 IDENTITY가 아닌 TABLE을 기본 시퀀스 전략으로 사용합니다.
 # hibernate.id.new_generator_mappings = false일 경우 사용하는 DB(Dialect)에 의해 Generator가 결정됩니다.
@@ -22,7 +21,6 @@ spring.jpa.hibernate-use-new-id-generator-mappings=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-
 
 
 logging.level.root=info
