--- a/ranking/src/main/resources/application.properties
+++ b/ranking/src/main/resources/application.properties
@@ -12,8 +12,9 @@ spring.datasource.password=ssafy
 
 # JPA 설정
 spring.jpa.open-in-view=true
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=update
+
+
 
 # Hibernate 5.0 부터 GenerationType.AUTO는 IDENTITY가 아닌 TABLE을 기본 시퀀스 전략으로 사용합니다.
 # hibernate.id.new_generator_mappings = false일 경우 사용하는 DB(Dialect)에 의해 Generator가 결정됩니다.
