--- a/ranking/src/main/resources/application.properties
+++ b/ranking/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.redis.port=6379
 
 # mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/rank_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=ssafy
+spring.datasource.url=jdbc:mysql://localhost:3306/secretzoo?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=fiveguys
+spring.datasource.password=zoo1qsecret2wguys3efive4r!
 
 # JPA 설정
 spring.jpa.open-in-view=true
@@ -25,21 +25,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 logging.level.root=info
-
-
-
-# H2 database
-#spring.datasource.url=jdbc:h2:tcp://localhost/~/game
-#spring.datasource.username=sa
-#spring.datasource.password=1234
-#spring.datasource.driver-class-name=org.h2.Driver
-
-
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.format_sql=false
-#spring.jpa.properties.hibernate.default_batch_fetch_size=100
-#spring.jpa.properties.hibernate.show_sql=true
-
 
 
 rank.update.interval.minutes=1
