--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
-    "bootstrap": "^5.3.2",
+    "framer-motion": "^11.0.3",
     "install": "^0.13.0",
     "npm": "^10.3.0",
     "react": "^18.2.0",
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "socket.io-client": "^4.7.4",
+    "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
