--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "socket.io-client": "^4.7.4",
     "tailwindcss": "^3.4.1",
