--- a/ranking/src/main/resources/application-docker.properties
+++ b/ranking/src/main/resources/application-docker.properties
@@ -1,13 +1,13 @@
 spring.output.ansi.enabled=always
-
+server.servlet.context-path=/api
 spring.redis.host=redis
 spring.redis.port=6379
 
 # mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://mysql:3306/rank_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=ssafy
+spring.datasource.username=fiveguys
+spring.datasource.password=zoo1qsecret2wguys3efive4r!
 
 
 # JPA 설정
