[S10P12A406-160] rewards 기능 개발

--- a/ranking/src/main/resources/application.properties
+++ b/ranking/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.output.ansi.enabled=always
-server.servlet.context-path=/api
+#server.servlet.context-path=/api
 # redis
 spring.redis.host=localhost
 spring.redis.port=6379
