--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -32,6 +32,7 @@ repositories {
         implementation 'org.springframework.boot:spring-boot-starter-aop'
         implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.3'
         implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+        implementation 'org.springframework.boot:spring-boot-starter-validation'
         compileOnly 'org.projectlombok:lombok'
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
         runtimeOnly 'com.mysql:mysql-connector-j'
