--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.datasource.password=zoo1qsecret2wguys3efive4r!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # redis for spring security
-spring.data.redis.host=localhost
-#spring.data.redis.host=redis
+#spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 
 # redis for ranking
-spring.data.redis.host2=localhost
-#spring.data.redis.host2=redis2
+#spring.data.redis.host2=localhost
+spring.data.redis.host2=redis2
 spring.data.redis.port2=6380
 
 # UTF-8 \uC138\uD305
@@ -26,7 +26,7 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.format_sql=true
 
 logging.level.root=info
