[S10P12A406-187] feat : 백엔드 서버 통합 및 랭킹 로직 수정

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -44,9 +44,9 @@ services:
     container_name: spring-app
     build:
       context: .
-      dockerfile: /backend/Dockerfile
-    #ports:
-    #  - 81:8080
+      dockerfile: Dockerfile
+    ports:
+     - 8080:8080
     networks:
       - docker_nat
     environment:
