--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "flowbite-react": "^0.7.2",
     "framer-motion": "^11.0.3",
     "install": "^0.13.0",
     "npm": "^10.3.0",
