chore : 도커 컴포스 테스트

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,13 +8,13 @@ spring.datasource.password=zoo1qsecret2wguys3efive4r!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # redis for spring security
-spring.data.redis.host=localhost
-#spring.data.redis.host=redis
+# spring.data.redis.host=localhost
+spring.data.redis.host=redis
 spring.data.redis.port=6379
 
 # redis for ranking
-spring.data.redis.host2=localhost
-#spring.data.redis.host2=redis2
+# spring.data.redis.host2=localhost
+spring.data.redis.host2=redis2
 spring.data.redis.port2=6380
 
 # UTF-8 \uC138\uD305
