--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       MYSQL_PASSWORD: zoo1qsecret2wguys3efive4r!
       TZ: 'Asia/Seoul'
     ports:
-      - "3306:3306"
+      - "3307:3306"
     networks:
       - docker_nat
 
@@ -21,8 +21,8 @@ services:
     image: redis:latest
     container_name: redis
     hostname: redis
-    ports:
-      - 6379:6379
+    # ports:
+    #   - 6379:6379
     extra_hosts:
       - host.docker.internal:host-gateway
     networks:
@@ -32,8 +32,8 @@ services:
     image: redis:latest
     container_name: redis2
     hostname: redis2
-    ports:
-      - 6380:6379
+    # ports:
+    #   - 6380:6379
     extra_hosts:
       - host.docker.internal:host-gateway
     networks:
@@ -50,13 +50,13 @@ services:
     networks:
       - docker_nat
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/secretzoo?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3307/secretzoo?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false
       SPRING_DATASOURCE_USERNAME: "root"
       SPRING_DATASOURCE_PASSWORD: "ssafy"
       SPRING_REDIS_HOST: redis
       SPRING_REDIS_PORT: 6379
       SPRING_REDIS_HOST2: redis2
-      SPRING_REDIS_PORT2: 6380
+      SPRING_REDIS_PORT2: 6379
     depends_on:
       - mysql
       - redis
