chore : 서버 테스트

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -45,8 +45,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-     - 8080:8080
+    # ports:
+    #  - 8080:8080
     networks:
       - docker_nat
     environment:
