--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci --default-authentication-plugin=mysql_native_password
     container_name: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: ssafy
+      MYSQL_ROOT_PASSWORD: zoo1qsecret2wguys3efive4r!
       MYSQL_DATABASE: secretzoo
       MYSQL_ROOT_HOST: '%'
       MYSQL_USER: fiveguys
@@ -14,6 +14,9 @@ services:
       TZ: 'Asia/Seoul'
     ports:
       - "3306:3306"
+    volumes:
+      - "/db/mysql:/var/lib/mysql"
+    
     networks:
       - docker_nat
 
@@ -52,7 +55,7 @@ services:
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/secretzoo?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false
       SPRING_DATASOURCE_USERNAME: "root"
-      SPRING_DATASOURCE_PASSWORD: "ssafy"
+      SPRING_DATASOURCE_PASSWORD: "zoo1qsecret2wguys3efive4r!"
       SPRING_REDIS_HOST: redis
       SPRING_REDIS_PORT: 6379
       SPRING_REDIS_HOST2: redis2
