--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # redis for spring security
 # spring.data.redis.host=localhost
-spring.data.redis.host=redis
+spring.data.redis.host=redis1
 spring.data.redis.port=6379
 
 # redis for ranking
