chore : application.properties 서버 배포용 profile 수정

--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/secretzoo?characterEncoding=UT
 spring.datasource.username=fiveguys
 spring.datasource.password=zoo1qsecret2wguys3efive4r!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
+spring.config.activate.on-profile=dev
 # redis for spring security
 spring.data.redis.host=redis1
 spring.data.redis.port=6379
