--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,19 +9,19 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # redis for server
 # redis for spring security
-#spring.data.redis.host=redis1
-#spring.data.redis.port=6379
-## redis for ranking
-#spring.data.redis.host2=redis2
-#spring.data.redis.port2=6379
+spring.data.redis.host=redis1
+spring.data.redis.port=6379
+# redis for ranking
+spring.data.redis.host2=redis2
+spring.data.redis.port2=6379
 
 
 #redis 설정 for local test
 
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-spring.data.redis.host2=localhost
-spring.data.redis.port2=6380
+# spring.data.redis.host=localhost
+# spring.data.redis.port=6379
+# spring.data.redis.host2=localhost
+# spring.data.redis.port2=6380
 
 
 # UTF-8 \uC138\uD305
