feat : server error page 처리및 페이지 추가

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -52,3 +52,14 @@ spring.freemarker.cache=false
 rank.update.interval.minutes=1
 rank.max.count=10
 rank.update.interval=10000
+
+
+#정적 리소스
+#spring.resources.static-locations=classpath:/static/
+
+#서버 에러 관련
+server.error.whitelabel.enabled=false
+server.error.include-exception=true
+server.error.include-message=never
+server.error.include-stacktrace=never
+server.error.include-binding-errors=never
