--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.data.redis.host2=redis2
 spring.data.redis.port2=6379
 
 
-#redis 설정 for local test
+#redis ì¤ì  for local test
 
 # spring.data.redis.host=localhost
 # spring.data.redis.port=6379
@@ -48,16 +48,16 @@ spring.freemarker.cache=false
 
 
 
-# 랭킹 갱신 관련 설정
+# ë­í¹ ê°±ì  ê´ë ¨ ì¤ì 
 rank.update.interval.minutes=1
 rank.max.count=10
 rank.update.interval=10000
 
 
-#정적 리소스
+#ì ì  ë¦¬ìì¤
 #spring.resources.static-locations=classpath:/static/
 
-#서버 에러 관련
+#ìë² ìë¬ ê´ë ¨
 server.error.whitelabel.enabled=false
 server.error.include-exception=true
 server.error.include-message=never
