[S10P12A406-111] feat : 이메일 인증 진행ì 중

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,7 +24,7 @@ logging.level.root=info
 logging.level.com.ssafy.fiveguys.game=debug
 
 #oauth
-spring.profiles.include=oauth
+spring.profiles.include=oauth, smtp
 
 #\uC11C\uBC84 \uC790\uB3D9 \uB514\uBC84\uADF8
 spring.devtools.livereload.enabled=true
