--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -30,7 +30,7 @@ repositories {
         implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
         implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'org.springframework.boot:spring-boot-starter-aop'
-        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '2.6.3'
+        implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail'
         implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
         compileOnly 'org.projectlombok:lombok'
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
