--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: /client
       dockerfile: Dockerfile
     container_name: react-app
-    # ports:
-    #  - "3000:3000"
+    ports:
+     - "3000:3000"
     #volumes:
     #  - /home/ubuntu/secretzoo/frontend/client:/usr/src/app
     #volumes:
