--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   react-app:
     build:
-      context: /client
+      context: ./client
       dockerfile: Dockerfile
     container_name: react-app
     # ports:
@@ -17,7 +17,7 @@ services:
 
   node-server:
       build:
-        context: /server
+        context: ./server
         dockerfile: Dockerfile # Node.js 서버를 위한 Dockerfile
       container_name: node-server
       # ports:
