[S10P12A406-186] chore : docker-compose 프론트 빌드 테스트

--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     #  - /home/ubuntu/secretzoo/frontend/client:/usr/src/app
     #volumes:
     #  - /usr/src/app:/usr/share/nginx/html
+    environment:
+      - WDS_SOCKET_PROT=0
     networks:
       - docker_nat
 
