--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -63,3 +63,11 @@ server.error.include-exception=true
 server.error.include-message=never
 server.error.include-stacktrace=never
 server.error.include-binding-errors=never
+
+
+#타임 리프 고치면 바로 렌더링
+#운영 서버에서 반드시 뺼 것
+#spring.thymeleaf.cache=false
+#spring.thymeleaf.prefix=file:src/main/resources/templates/
+#spring.mvc.static-path-pattern=/static/**
+#spring.resources.add-mappings=false
