[S10P12A406-186] chore : spring docker profile 설정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.output.ansi.enabled=always
-#server.servlet.context-path=/api
 
 # MySQL Database
 spring.datasource.url=jdbc:mysql://localhost:3306/secretzoo?characterEncoding=UTF-8&serverTimezone=UTC
@@ -9,26 +8,26 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # redis for server
 # redis for spring security
-spring.data.redis.host=redis1
-spring.data.redis.port=6379
-# redis for ranking
-spring.data.redis.host2=redis2
-spring.data.redis.port2=6379
+#spring.data.redis.host=redis1
+#spring.data.redis.port=6379
+## redis for ranking
+#spring.data.redis.host2=redis2
+#spring.data.redis.port2=6379
 
 
-#redis ì¤ì  for local test
+#redis for local test
 
-# spring.data.redis.host=localhost
-# spring.data.redis.port=6379
-# spring.data.redis.host2=localhost
-# spring.data.redis.port2=6380
+ spring.data.redis.host=localhost
+ spring.data.redis.port=6379
+ spring.data.redis.host2=localhost
+ spring.data.redis.port2=6380
 
 
-# UTF-8 \uC138\uD305
+# UTF-8
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
 
-# JPA ??
+# JPA
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=mysql
@@ -42,22 +41,22 @@ logging.level.com.ssafy.fiveguys.game=debug
 #oauth
 spring.profiles.include=oauth
 
-#\uC11C\uBC84 \uC790\uB3D9 \uB514\uBC84\uADF8
+
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 
 
 
-# ë­í¹ ê°±ì  ê´ë ¨ ì¤ì 
+#랭킹 관련 메시지
 rank.update.interval.minutes=1
 rank.max.count=10
 rank.update.interval=10000
 
 
-#ì ì  ë¦¬ìì¤
+#static 경로
 #spring.resources.static-locations=classpath:/static/
 
-#ìë² ìë¬ ê´ë ¨
+#스프링 부트 에러 처리 설정¨
 server.error.whitelabel.enabled=false
 server.error.include-exception=true
 server.error.include-message=never
