[S10P12A406-186] chore : spring docker profile 설정

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,4 +9,4 @@ COPY ${JAR_FILE_PATH}/game-0.0.1-SNAPSHOT.jar myboot.jar
 # 실행시 사용할 환경 변수 설정 (예: 프로파일 설정)
 ENV SPRING_PROFILES_ACTIVE=dev,oauth
 
-ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=${SPRING_PROFILE}", "./myboot.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=${SPRING_PROFILES_ACTIVE}", docker "./myboot.jar"]
