--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.output.ansi.enabled=always
+# docker profiles 설정
+spring.config.activate.on-profile=dev,oauth
 
 # MySQL Database
 spring.datasource.url=jdbc:mysql://localhost:3306/secretzoo?characterEncoding=UTF-8&serverTimezone=UTC
