[S10P12A406-186] chore : spring docker profile 설정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.output.ansi.enabled=always
 # docker profiles 설정
-spring.config.activate.on-profile=dev,oauth
+#spring.config.activate.on-profile=dev,oauth
 
 # MySQL Database
 spring.datasource.url=jdbc:mysql://localhost:3306/secretzoo?characterEncoding=UTF-8&serverTimezone=UTC
@@ -10,19 +10,19 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # redis for server
 # redis for spring security
-#spring.data.redis.host=redis1
-#spring.data.redis.port=6379
-## redis for ranking
-#spring.data.redis.host2=redis2
-#spring.data.redis.port2=6379
+spring.data.redis.host=redis1
+spring.data.redis.port=6379
+# redis for ranking
+spring.data.redis.host2=redis2
+spring.data.redis.port2=6379
 
 
 #redis for local test
 
- spring.data.redis.host=localhost
- spring.data.redis.port=6379
- spring.data.redis.host2=localhost
- spring.data.redis.port2=6380
+# spring.data.redis.host=localhost
+# spring.data.redis.port=6379
+# spring.data.redis.host2=localhost
+# spring.data.redis.port2=6380
 
 
 # UTF-8
