--- a/backend/src/main/resources/application-oauth.properties
+++ b/backend/src/main/resources/application-oauth.properties
@@ -3,14 +3,14 @@
 spring.security.oauth2.client.registration.google.client-id=714306826420-cu2685nsad9ddr6vri293r0l51avipkf.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
-spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=https://secretzoo.site/api/login/oauth2/code/google
 
 # naver
 spring.security.oauth2.client.registration.naver.client-id=I1FOjCCJUBQJUCtD_h2p
 spring.security.oauth2.client.registration.naver.client-secret=8qAUK5gVqC
 spring.security.oauth2.client.registration.naver.scope=name,email
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.redirect-uri=https://secretzoo.site/api/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.client-name=Naver
 spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
@@ -22,7 +22,7 @@ spring.security.oauth2.client.registration.kakao.client-id=a3fdead257d8eb9f77b32
 spring.security.oauth2.client.registration.kakao.client-secret=YGzVHGemosOOmI0nHW1yMgBnCoqzHL0a
 spring.security.oauth2.client.registration.kakao.scope=profile_nickname, account_email
 spring.security.oauth2.client.registration.kakao.client-authentication-method=client_secret_post
-spring.security.oauth2.client.registration.kakao.redirect-uri=http://localhost:8080/login/oauth2/code/kakao
+spring.security.oauth2.client.registration.kakao.redirect-uri=https://secretzoo.site/api/login/oauth2/code/kakao
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.kakao.client-name=kakao
 spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
