[S10P12A406-215] fix : swaager ui path

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -72,3 +72,6 @@ server.error.include-binding-errors=never
 #spring.thymeleaf.prefix=file:src/main/resources/templates/
 #spring.mvc.static-path-pattern=/static/**
 #spring.resources.add-mappings=false
+
+springdoc.swagger-ui.use-root-path=true
+springdoc.swagger-ui.path=/api/swaager-ui/index.html
