[S10P12A406-215] fix : swagger ui path

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -74,4 +74,4 @@ server.error.include-binding-errors=never
 #spring.resources.add-mappings=false
 
 springdoc.swagger-ui.use-root-path=true
-springdoc.swagger-ui.path=/swagger-ui/index.html
+springdoc.swagger-ui.path=/swagger-ui
