--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -74,3 +74,5 @@ server.error.include-binding-errors=never
 #spring.resources.add-mappings=false
 
 springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.disable-swagger-default-url=true
