fix : RankApiController Crossorigin 설정 추가

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -58,7 +58,7 @@ rank.update.interval=10000
 #static 경로
 #spring.resources.static-locations=classpath:/static/
 
-#스프링 부트 에러 처리 설정¨
+#스프링 부트 에러 처리 설정
 server.error.whitelabel.enabled=false
 server.error.include-exception=true
 server.error.include-message=never
