design : 백엔드 서버 에러 페이지 디자인 수정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -68,10 +68,10 @@ server.error.include-binding-errors=never
 
 #타임 리프 고치면 바로 렌더링
 #운영 서버에서 반드시 뺼 것
-#spring.thymeleaf.cache=false
-#spring.thymeleaf.prefix=file:src/main/resources/templates/
-#spring.mvc.static-path-pattern=/static/**
-#spring.resources.add-mappings=false
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=file:src/main/resources/templates/
+spring.mvc.static-path-pattern=/static/**
+spring.resources.add-mappings=false
 
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
