--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,6 +35,7 @@ repositories {
         implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
         implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+        implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
         compileOnly 'org.projectlombok:lombok'
         developmentOnly 'org.springframework.boot:spring-boot-devtools'
         runtimeOnly 'com.mysql:mysql-connector-j'
