--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,16 +18,16 @@ spring.data.redis.port2=6379
 
 
 #redis for local test
-
-# spring.data.redis.host=localhost
-# spring.data.redis.port=6379
-# spring.data.redis.host2=localhost
-# spring.data.redis.port2=6380
+#spring.data.redis.host=localhost
+#spring.data.redis.port=6379
+#spring.data.redis.host2=localhost
+#spring.data.redis.port2=6380
 
 
 # UTF-8
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
+
 
 # JPA
 spring.jpa.show-sql=true
@@ -48,12 +48,10 @@ spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 
 
-
 #랭킹 관련 메시지
 rank.update.interval.minutes=1
 rank.max.count=10
 rank.update.interval=10000
-
 
 #static 경로
 #spring.resources.static-locations=classpath:/static/
@@ -70,7 +68,7 @@ server.error.include-binding-errors=never
 #운영 서버에서 반드시 뺼 것
 #spring.thymeleaf.cache=false
 
-
+#swagger 설정
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.disable-swagger-default-url=true
