feat : UserException 기능 추가

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,6 +27,7 @@ spring.data.redis.port2=6379
 # UTF-8
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.force=true
+spring.jackson.time-zone=Asia/Seoul
 
 
 # JPA
