feat : queryDSL 활용한 player 검색 동적쿼리API추가

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.data.redis.host2=redis2
 spring.data.redis.port2=6379
 
 
-#redis for local test
+##redis for local test
 #spring.data.redis.host=localhost
 #spring.data.redis.port=6379
 #spring.data.redis.host2=localhost
@@ -73,3 +73,9 @@ server.error.include-binding-errors=never
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.disable-swagger-default-url=true
+
+
+
+spring.data.neo4j.uri=bolt://localhost:7687
+spring.data.neo4j.username=neo4j
+spring.data.neo4j.password=password
