--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -20,6 +20,7 @@
     "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2",
     "socket.io-client": "^4.7.4",
+    "sweetalert2": "^11.10.4",
     "tailwindcss": "^3.4.1",
     "web-vitals": "^2.1.4"
   },
