--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       context: ./client
       dockerfile: Dockerfile
     container_name: react-app
-    # ports:
-    #  - "3000:3000"
+    ports:
+     - "3000:3000"
     #volumes:
     #  - /home/ubuntu/secretzoo/frontend/client:/usr/src/app
     #volumes:
@@ -23,12 +23,30 @@ services:
         context: ./server
         dockerfile: Dockerfile # Node.js 서버를 위한 Dockerfile
       container_name: node-server
-      # ports:
-      # - "3001:3001" # Node.js 서버 포트 설정
+      ports:
+      - "3001:3001" # Node.js 서버 포트 설정
       expose:
         - 3000
       networks:
         - docker_nat
+  signal-server:
+    build:
+      context: ../toy/openvidu-basic-node
+      dockerfile: Dockerfile # 시그널링 서버를 위한 Dockerfile
+    container_name: signal-server
+    ports:
+    - "5000:5000"
+    expose:
+      - 5000
+    networks:
+      - docker_nat
+  openvidu:
+    image: openvidu/openvidu-dev:2.29.0
+    environment:
+      - OPENVIDU_SECRET=MY_SECRET
+    ports:
+      - "4443:4443"
+    restart: always
 networks:
   docker_nat:
     external: true
