[S10P12A406-246] chore : 랭킹 API reponse 수정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.output.ansi.enabled=always
-# docker profiles 설정
+# docker profiles ì¤ì 
 #spring.config.activate.on-profile=dev,oauth
 
 # MySQL Database
@@ -49,15 +49,15 @@ spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 
 
-#랭킹 관련 메시지
+#ë­í¹ ê´ë ¨ ë©ìì§
 rank.update.interval.minutes=1
 rank.max.count=10
 rank.update.interval=10000
 
-#static 경로
+#static ê²½ë¡
 #spring.resources.static-locations=classpath:/static/
 
-#스프링 부트 에러 처리 설정
+#ì¤íë§ ë¶í¸ ìë¬ ì²ë¦¬ ì¤ì 
 server.error.whitelabel.enabled=false
 server.error.include-exception=true
 server.error.include-message=never
@@ -65,11 +65,11 @@ server.error.include-stacktrace=never
 server.error.include-binding-errors=never
 
 
-#타임 리프 고치면 바로 렌더링
-#운영 서버에서 반드시 뺼 것
+#íì ë¦¬í ê³ ì¹ë©´ ë°ë¡ ë ëë§
+#ì´ì ìë²ìì ë°ëì ëº¼ ê²
 #spring.thymeleaf.cache=false
 
-#swagger 설정
+#swagger ì¤ì 
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.disable-swagger-default-url=true
