--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       # - "3001:3001" # Node.js 서버 포트 설정
       expose:
         - 3000
+      restart: always
       networks:
         - docker_nat
 networks:
