--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -22,6 +22,7 @@
     "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.10.4",
     "tailwindcss": "^3.4.1",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
