--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -30,6 +30,18 @@ services:
       restart: always
       networks:
         - docker_nat
+
+  signal-server:
+    build:
+      context: ./signaling
+      dockerfile: Dockerfile # 시그널링 서버를 위한 Dockerfile
+    container_name: signal-server
+    # ports:
+    # - "5000:5000"
+    expose:
+      - 5000
+    networks:
+      - docker_nat
 networks:
   docker_nat:
     external: true
