chore : 배포 테스트

--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: ./client
       dockerfile: Dockerfile
     container_name: react-app
+    network_mode: host
+    expose: 3000
     # ports:
     #  - "3000:3000"
     #volumes:
@@ -15,33 +17,34 @@ services:
     environment:
       - WDS_SOCKET_PROT=0
       - REACT_APP_SOCKET_SERVER_URL=ws://node-server:3000
-    networks:
-      - docker_nat
+    # networks:
+    #   - docker_nat
 
   node-server:
       build:
         context: ./server
         dockerfile: Dockerfile # Node.js 서버를 위한 Dockerfile
       container_name: node-server
+      network_mode: host
       # ports:
       # - "3001:3001" # Node.js 서버 포트 설정
       expose:
         - 3000
       restart: always
-      networks:
-        - docker_nat
+      # networks:
+      #   - docker_nat
 
-  signal-server:
-    build:
-      context: ./signaling
-      dockerfile: Dockerfile # 시그널링 서버를 위한 Dockerfile
-    container_name: signal-server
-    # ports:
-    # - "5000:5000"
-    expose:
-      - 5000
-    networks:
-      - docker_nat
-networks:
-  docker_nat:
-    external: true
+  # signal-server:
+  #   build:
+  #     context: ./signaling
+  #     dockerfile: Dockerfile # 시그널링 서버를 위한 Dockerfile
+  #   container_name: signal-server
+  #   # ports:
+  #   # - "5000:5000"
+  #   expose:
+  #     - 5000
+  #   networks:
+  #     - docker_nat
+# networks:
+#   docker_nat:
+#     external: true
