--- a/openvidu/docker-compose.yml
+++ b/openvidu/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   openvidu-app:
     container_name: openvidu-app
+    network_mode: host
     build:
       context: .
       dockerfile: Dockerfile
@@ -10,11 +11,11 @@ services:
     #  - 8080:8080
     expose:
       - 5000
-    networks:
-      - docker_nat
+    # networks:
+    #   - docker_nat
 #    environment:
 #      OPENVIDU_URL:
 #      OPENVISU_SECRET:
-networks:
-  docker_nat:
-    external: true
+# networks:
+#   docker_nat:
+#     external: true
