chore : 배포 테스트

--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -44,6 +44,6 @@ services:
   #     - 5000
   #   networks:
   #     - docker_nat
-# networks:
-#   docker_nat:
-#     external: true
+networks:
+  docker_nat:
+    external: true
