--- a/frontend/client/Dockerfile
+++ b/frontend/client/Dockerfile
@@ -8,6 +8,7 @@ WORKDIR /usr/src/app/client
 COPY package.json ./
 
 RUN npm install
+RUN npm install --save-dev @babel/plugin-proposal-private-property-in-object
 
 # 앱 소스 추가
 COPY . .
