--- a/openvidu/docker-compose.yml
+++ b/openvidu/docker-compose.yml
@@ -1,23 +1,3 @@
-# version: '3'
-
-# services:
-#   openvidu-app:
-#     container_name: openvidu-app
-#     build:
-#       context: .
-#       dockerfile: Dockerfile
-#     # ports:
-#     #  - 8080:8080
-#     expose:
-#       - 5000
-#     networks:
-#       - docker_nat
-# networks:
-#   docker_nat:
-#     external: true
-
-
-
 version: '3'
 
 services:
@@ -26,14 +6,29 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    networks:
+      - docker_nat
     environment:
       - SERVER_PORT=5442
-      - OPENVIDU_URL=http://localhost:5443
+      - OPENVIDU_URL=http://openvidu-openvidu-server:5443
       - OPENVIDU_SECRET=MY_SECRET
-    networks_mode: host
-#     networks:
-#       - docker_nat
-# networks:
-#   docker_nat:
-#     external: true
+networks:
+  docker_nat:
+    external: true
+
+
+
+# version: '3'
+
+# services:
+#   openvidu-app:
+#     container_name: openvidu-app
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     environment:
+#       - SERVER_PORT=5442
+#       - OPENVIDU_URL=http://localhost:5443
+#       - OPENVIDU_SECRET=MY_SECRET
+#     networks_mode: host
 
