--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -15,7 +15,8 @@ services:
     environment:
       - WDS_SOCKET_PROT=0
       - REACT_APP_SOCKET_SERVER_URL=ws://node-server:3001
-      - APPLICATION_SERVER_URL=http://localhost:5442
+      # - APPLICATION_SERVER_URL=https://localhost:5442
+      - APPLICATION_SERVER_URL=https://openvidu.secretzo.site
     networks:
       - docker_nat
 
