--- a/openvidu/docker-compose.yml
+++ b/openvidu/docker-compose.yml
@@ -30,5 +30,5 @@ services:
       - SERVER_PORT=5442
       - OPENVIDU_URL=http://localhost:5443
       - OPENVIDU_SECRET=MY_SECRET
-    networks_mode: host
+    network_mode: host
 
