--- a/openvidu/docker-compose.yml
+++ b/openvidu/docker-compose.yml
@@ -18,17 +18,39 @@
 
 
 
-version: '3'
+#version: '3'
+#
+#services:
+#  openvidu-app:
+#    container_name: openvidu-app
+#    expose:
+#      - 5000
+#    build:
+#      context: .
+#      dockerfile: Dockerfile
+#    environment:
+#      - SERVER_PORT=5442
+#      - OPENVIDU_URL=http://localhost:5443
+#      - OPENVIDU_SECRET=MY_SECRET
+#    network_mode: host
 
-services:
-  openvidu-app:
-    container_name: openvidu-app
-    build:
-      context: .
-      dockerfile: Dockerfile
-    environment:
-      - SERVER_PORT=5442
-      - OPENVIDU_URL=http://localhost:5443
-      - OPENVIDU_SECRET=MY_SECRET
-    network_mode: host
 
+ version: '3'
+
+ services:
+   openvidu-app:
+     container_name: openvidu-app
+     build:
+       context: .
+       dockerfile: Dockerfile
+     expose:
+       - 5000
+     networks:
+       - docker_nat
+     environment:
+       - SERVER_PORT=5442
+       - OPENVIDU_URL=http://localhost:5443
+       - OPENVIDU_SECRET=MY_SECRET
+ networks:
+   docker_nat:
+     external: true
