--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -15,8 +15,8 @@ services:
     environment:
       - WDS_SOCKET_PROT=0
       - REACT_APP_SOCKET_SERVER_URL=ws://node-server:3001
-      - APPLICATION_SERVER_URL=https://openvidu.secretzoo.site
-      # - APPLICATION_SERVER_URL=http://openvidu-app:5000
+      # - APPLICATION_SERVER_URL=https://openvidu.secretzoo.site
+      - APPLICATION_SERVER_URL=http://localhost:5442
     networks:
       - docker_nat
 
