chore : openvidu 배포 테스트

--- a/openvidu/docker-compose.yml
+++ b/openvidu/docker-compose.yml
@@ -40,6 +40,8 @@
  services:
    openvidu-app:
      container_name: openvidu-app
+     expose:
+       - 5000
      build:
        context: .
        dockerfile: Dockerfile
