chore : openvidu 배포 테스트

--- a/openvidu/docker-compose.yml
+++ b/openvidu/docker-compose.yml
@@ -37,18 +37,17 @@ networks:
 #    network_mode: host
 
 
- version: '3'
-
- services:
-   openvidu-app:
-     container_name: openvidu-app
-     expose:
-       - 5000
-     build:
-       context: .
-       dockerfile: Dockerfile
-     environment:
-       - SERVER_PORT=5442
-       - OPENVIDU_URL=http://localhost:5443
-       - OPENVIDU_SECRET=MY_SECRET
-     network_mode: host
+#  version: '3'
+#  services:
+#    openvidu-app:
+#      container_name: openvidu-app
+#      expose:
+#        - 5000
+#      build:
+#        context: .
+#        dockerfile: Dockerfile
+#      environment:
+#        - SERVER_PORT=5442
+#        - OPENVIDU_URL=http://localhost:5443
+#        - OPENVIDU_SECRET=MY_SECRET
+#      network_mode: host
