chore : openvidu 배포 테스트

--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     #volumes:
     #  - /usr/src/app:/usr/share/nginx/html
     environment:
+      - NODE_ENV=production
       - WDS_SOCKET_PROT=0
       - REACT_APP_SOCKET_SERVER_URL=ws://node-server:3001
       - APPLICATION_SERVER_URL=https://openvidu.secretzoo.site
