--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -12,10 +12,10 @@ services:
     #  - /home/ubuntu/secretzoo/frontend/client:/usr/src/app
     #volumes:
     #  - /usr/src/app:/usr/share/nginx/html
-    environment:
-      - WDS_SOCKET_PROT=0
-      - REACT_APP_SOCKET_SERVER_URL=ws://node-server:3001
-      - APPLICATION_SERVER_URL=http://openvidu-app:5000
+    # environment:
+    #   - WDS_SOCKET_PROT=0
+    #   - REACT_APP_SOCKET_SERVER_URL=ws://node-server:3001
+    #   - APPLICATION_SERVER_URL=http://openvidu-app:5000
     networks:
       - docker_nat
 
