--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-toolkit": "^1.1.2",
     "socket.io-client": "^4.7.4",
     "sweetalert2": "^11.10.5",
