--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.output.ansi.enabled=always
-# docker profiles ì¤ì 
+# docker profiles
 #spring.config.activate.on-profile=dev,oauth
 
 # MySQL Database
@@ -49,15 +49,15 @@ spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 
 
-#ë­í¹ ê´ë ¨ ë©ìì§
+#\uB7AD\uD0B9 \uC11C\uBE44\uC2A4
 rank.update.interval.minutes=1
 rank.max.count=10
 rank.update.interval=10000
 
-#static ê²½ë¡
+#static \uC124\uC815
 #spring.resources.static-locations=classpath:/static/
 
-#ì¤íë§ ë¶í¸ ìë¬ ì²ë¦¬ ì¤ì 
+#\uC11C\uBC84 \uC5D0\uB7EC \uC124\uC815
 server.error.whitelabel.enabled=false
 server.error.include-exception=true
 server.error.include-message=never
@@ -65,11 +65,10 @@ server.error.include-stacktrace=never
 server.error.include-binding-errors=never
 
 
-#íì ë¦¬í ê³ ì¹ë©´ ë°ë¡ ë ëë§
-#ì´ì ìë²ìì ë°ëì ëº¼ ê²
+#\uD0C0\uC784\uB9AC\uD504 \uC124\uC815
 #spring.thymeleaf.cache=false
 
-#swagger ì¤ì 
+#swagger \uC124\uC815
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.disable-swagger-default-url=true
