--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.output.ansi.enabled=always
-# docker profiles ì¤ì 
 #spring.config.activate.on-profile=dev,oauth
 
 # MySQL Database
@@ -49,15 +48,15 @@ spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 
 
-#ë­í¹ ê´ë ¨ ë©ìì§
+#rank 스케쥴링 관련 변수
 rank.update.interval.minutes=1
 rank.max.count=10
 rank.update.interval=10000
 
-#static ê²½ë¡
+#static 경로
 #spring.resources.static-locations=classpath:/static/
 
-#ì¤íë§ ë¶í¸ ìë¬ ì²ë¦¬ ì¤ì 
+#서버 에러 메시지 설정
 server.error.whitelabel.enabled=false
 server.error.include-exception=true
 server.error.include-message=never
@@ -65,11 +64,10 @@ server.error.include-stacktrace=never
 server.error.include-binding-errors=never
 
 
-#íì ë¦¬í ê³ ì¹ë©´ ë°ë¡ ë ëë§
-#ì´ì ìë²ìì ë°ëì ëº¼ ê²
+#타임 리프 설정
 #spring.thymeleaf.cache=false
 
-#swagger ì¤ì 
+#swagger 설정
 springdoc.swagger-ui.path=/swagger-ui
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.disable-swagger-default-url=true
