--- a/toy/openvidu-basic-node/package.json
+++ b/toy/openvidu-basic-node/package.json
@@ -7,6 +7,7 @@
     "cors": "2.8.5",
     "dotenv": "16.0.1",
     "express": "4.18.1",
+    "openvidu-browser": "^2.29.1",
     "openvidu-node-client": "2.29.0"
   }
 }
