--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -17,6 +17,7 @@
     "openvidu-browser": "^2.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
