--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -16,6 +16,7 @@
     "npm": "^10.3.0",
     "openvidu-browser": "^2.29.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.4",
     "react-redux": "^9.1.0",
